eagerRead mode