@@ -15,7 +15,8 @@ import static java.lang.Math.toIntExact;
 import static java.util.concurrent.Executors.newScheduledThreadPool;
 import static java.util.concurrent.TimeUnit.SECONDS;
 
-import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
+import static org.apache.commons.lang3.RandomStringUtils.insecure;
+
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.nullValue;
@@ -42,7 +43,6 @@ import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledExecutorService;
 
 import org.apache.commons.io.IOUtils;
-
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -59,8 +59,10 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   @Parameterized.Parameters(name = "{0}")
   public static Collection<Object[]> data() {
     return Arrays.asList(new Object[][] {
-        {"Doesn't require expansion", KB_256, MB_1, MB_2},
-        {"Requires expansion", MB_1, KB_256, MB_2},
+        {"Doesn't require expansion, eagerRead", KB_256, MB_1, MB_2, true},
+        {"Doesn't require expansion, !eagerRead", KB_256, MB_1, MB_2, false},
+        {"Requires expansion, eagerRead", MB_1, KB_256, MB_2, true},
+        {"Requires expansion, !eagerRead", MB_1, KB_256, MB_2, false},
     });
   }
 
@@ -73,13 +75,15 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   private CountDownLatch controlLatch;
   private CountDownLatch mainThreadLatch;
   private PoolingByteBufferManager bufferManager;
+  private boolean eagerRead;
 
-  public CursorStreamProviderTestCase(String name, int dataSize, int bufferSize, int maxBufferSize) {
+  public CursorStreamProviderTestCase(String name, int dataSize, int bufferSize, int maxBufferSize, boolean eagerRead) {
     super(dataSize);
     executorService = newScheduledThreadPool(2);
     this.bufferSize = bufferSize;
     this.maxBufferSize = maxBufferSize;
     halfDataLength = data.length() / 2;
+    this.eagerRead = eagerRead;
 
     resetLatches();
   }
@@ -88,18 +92,20 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   public void before() {
     bufferManager = new PoolingByteBufferManager();
     final InputStream dataStream = createDataStream();
-    streamProvider = createStreamProvider(bufferSize, maxBufferSize, dataStream);
+    streamProvider = createStreamProvider(bufferSize, maxBufferSize, dataStream, eagerRead);
   }
 
   protected InputStream createDataStream() {
     return new ByteArrayInputStream(data.getBytes());
   }
 
-  protected CursorStreamProvider createStreamProvider(int bufferSize, int maxBufferSize, InputStream dataStream) {
+  protected CursorStreamProvider createStreamProvider(int bufferSize, int maxBufferSize, InputStream dataStream,
+                                                      boolean eagerRead) {
     InMemoryCursorStreamConfig config =
         new InMemoryCursorStreamConfig(new DataSize(bufferSize, BYTE),
                                        new DataSize(bufferSize / 2, BYTE),
-                                       new DataSize(maxBufferSize, BYTE));
+                                       new DataSize(maxBufferSize, BYTE),
+                                       eagerRead);
 
     return new InMemoryCursorStreamProvider(dataStream, config, bufferManager, from("log"), false);
   }
@@ -130,7 +136,7 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
     byte[] dest = new byte[halfDataLength];
 
     withCursor(cursor -> {
-      cursor.read(dest, 0, halfDataLength);
+      readCursor(cursor, dest, 0, halfDataLength);
       assertEquals(toString(dest), data.substring(0, halfDataLength));
     });
   }
@@ -139,11 +145,12 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   public void rewindWhileStreamNotFullyConsumed() throws Exception {
     withCursor(cursor -> {
       byte[] dest = new byte[halfDataLength];
-      cursor.read(dest, 0, halfDataLength);
+      readCursor(cursor, dest, 0, halfDataLength);
       assertEquals(toString(dest), data.substring(0, halfDataLength));
       cursor.seek(0);
       dest = new byte[data.length()];
-      cursor.read(dest, 0, dest.length);
+
+      readCursor(cursor, dest, 0, dest.length);
       assertEquals(toString(dest), data);
     });
 
@@ -157,7 +164,7 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
     dest[1] = dest[0];
 
     withCursor(cursor -> {
-      cursor.read(dest, 2, halfDataLength);
+      readCursor(cursor, dest, 2, halfDataLength);
       assertEquals(toString(dest), "!!" + data.substring(0, halfDataLength));
     });
   }
@@ -227,13 +234,14 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   @Test
   public void readsMostOfTheStreamInFirstAccessAndRemainderInSecond() throws Exception {
     byte[] dest = new byte[data.length()];
-    halfDataLength = new Double(Math.floor(halfDataLength * .8)).intValue();
+    halfDataLength = Double.valueOf(Math.floor(halfDataLength * .8)).intValue();
     withCursor(cursor -> {
-      int read = cursor.read(dest, 0, halfDataLength);
+      int read = readCursor(cursor, dest, 0, halfDataLength);
       assertThat(read, is(halfDataLength));
       assertEquals(toString(dest, 0, halfDataLength), data.substring(0, halfDataLength));
 
-      int secondRead = cursor.read(dest, read, data.length() - read);
+      int secondRead = readCursor(cursor, dest, read, data.length() - read);
+
       assertThat(secondRead, is(data.length() - read));
       assertEquals(toString(dest, halfDataLength, data.length() - read), data.substring(halfDataLength));
     });
@@ -268,12 +276,12 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
     byte[] dest = new byte[len];
 
     withCursor(cursor -> {
-      assertThat(cursor.read(dest, 0, len), is(len));
+      assertThat(readCursor(cursor, dest, 0, len), is(len));
       assertEquals(toString(dest), data.substring(0, len));
 
       final int position = bufferSize - 30;
       cursor.seek(position);
-      assertThat(cursor.read(dest, 0, len), is(len));
+      assertThat(readCursor(cursor, dest, 0, len), is(len));
 
       assertEquals(toString(dest), data.substring(position, position + len));
     });
@@ -292,20 +300,21 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
 
     withCursor(cursor -> {
       cursor.seek(position);
-      assertThat(cursor.read(dest, 0, len), is(len));
+      assertThat(readCursor(cursor, dest, 0, len), is(len));
       assertEquals(toString(dest), data.substring(position, position + len));
     });
   }
 
   @Test
   public void dataLengthMatchesMaxBufferSizeExactly() throws Exception {
-    data = randomAlphabetic(maxBufferSize);
+    data = insecure().nextAlphanumeric(maxBufferSize);
     final InputStream dataStream = createDataStream();
 
     InMemoryCursorStreamConfig config =
         new InMemoryCursorStreamConfig(new DataSize(maxBufferSize, BYTE),
                                        new DataSize(0, BYTE),
-                                       new DataSize(maxBufferSize, BYTE));
+                                       new DataSize(maxBufferSize, BYTE),
+                                       eagerRead);
 
     streamProvider = new InMemoryCursorStreamProvider(dataStream, config, bufferManager);
     withCursor(cursor -> assertEquals(IOUtils.toString(cursor), data));
@@ -370,7 +379,7 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   private void seekAndAssert(CursorStream cursor, long position, int length) throws Exception {
     byte[] randomBytes = new byte[length];
     cursor.seek(position);
-    cursor.read(randomBytes, 0, length);
+    readCursor(cursor, randomBytes, 0, length);
     assertEquals(toString(randomBytes), data.substring(toIntExact(position), toIntExact(position + length)));
   }
 
@@ -402,6 +411,18 @@ public class CursorStreamProviderTestCase extends AbstractByteStreamingTestCase 
   private void append(byte[] buffer, int read, StringBuilder accumulator) {
     for (int i = 0; i < read; i++) {
       accumulator.append((char) buffer[i]);
+    }
+  }
+
+  private int readCursor(CursorStream cursor, byte[] dest, int off, int len) throws IOException {
+    if (eagerRead) {
+      var r = 0;
+      while (r < len) {
+        r += cursor.read(dest, off + r, len - r);
+      }
+      return r;
+    } else {
+      return cursor.read(dest, off, len);
     }
   }
 
